...
  return (
    <Tab.Navigator>
      {hasBookingsModule && (
        <Tab.Screen
          name="Bookings"
          component={BookingsStack}
          options={{ headerShown: false, title: t('mission.title') || t('booking.title') }}
        />
      )}
      <Tab.Screen
        name="Settings"
        component={SettingsScreen}
        options={{ title: t('settings.title') }}
...
